--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^4.0.1",
+		"@lucia-auth/adapter-sqlite": "^3.0.1",
 		"@prisma/client": "^5.12.1",
 		"clsx": "^2.1.0",
+		"lucia": "^3.1.1",
+		"oslo": "^1.2.0",
 		"prisma": "^5.12.1",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
